Stable version with cash

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">HHClient</string>
-    <string name="title_vacancy">Vacancies</string>
+    <string name="title_vacancy">Вакансий</string>
 </resources>
