Add activity with search button and edittext

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -2,4 +2,8 @@
 <resources>
     <string name="app_name">HHClient</string>
     <string name="title_vacancy">Вакансий</string>
+    <string name="find_vacancies">Найти вакансии</string>
+    <string name="vacancy_text_search">Что искать? (должность, навыки)</string>
+    <string name="vacancy_region_search">Регион (город, страна)</string>
+    <string name="message_text_search_null">Заполните поля для поиска</string>
 </resources>
