Add detailed activity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="activity_detail_vacancy_label">Show vacancy</string>
     <!-- CURRENCY -->
     <string name="RUR">RUB</string>
+    <string name="USD">USD</string>
 </resources>
