--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -9,4 +9,5 @@
     <string name="activity_detail_vacancy_label">Просмотр вакансии</string>
     <!-- CURRENCY -->
     <string name="RUR">руб.</string>
+    <string name="USD">$</string>
 </resources>
